--- a/src/app/devices/interval/interval.component.html
+++ b/src/app/devices/interval/interval.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-1">
   <div class="col-4">
     <button mat-raised-button color="primary" class="device-button" (click)="intervalStart()">Start</button>
   </div>
