--- a/src/app/devices/device-list/device-list.component.html
+++ b/src/app/devices/device-list/device-list.component.html
@@ -3,28 +3,27 @@
   <table mat-table [dataSource]="dataSource" >
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th class="w-25" mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let device"> {{ device.name }} </td>
     </ng-container>
   
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let device"> {{ device.id }} </td>
+    <ng-container matColumnDef="com">
+      <th class="w-25" mat-header-cell *matHeaderCellDef> Com </th>
+      <td mat-cell *matCellDef="let device"> {{ device.com.status.label }} </td>
     </ng-container>
     
-    <ng-container matColumnDef="ip">
-      <th mat-header-cell *matHeaderCellDef> IP </th>
-      <td mat-cell *matCellDef="let device"> {{ device.ip }} </td>
+    <ng-container matColumnDef="device">
+      <th class="w-25" mat-header-cell *matHeaderCellDef> Device </th>
+      <td mat-cell *matCellDef="let device"> {{ device.status.label }} </td>
     </ng-container>
   
-    <ng-container matColumnDef="port">
-      <th mat-header-cell *matHeaderCellDef> Port </th>
-      <td mat-cell *matCellDef="let device"> {{ device.port }} </td>
+    <ng-container matColumnDef="xenon">
+      <th mat-header-cell *matHeaderCellDef> Xenon </th>
+      <td mat-cell *matCellDef="let device"> {{  device.xenon.status.label }} </td>
     </ng-container>
     
-    <tr mat-header-row *matHeaderRowDef="deviceColumns">
-    <tr mat-row *matRowDef="let row; columns: deviceColumns;" (click)="onRowClicked(row)"> 
-    </tr>
+    <tr mat-header-row *matHeaderRowDef="deviceColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: deviceColumns;" (click)="onRowClicked(row)"></tr>
     
   </table>
 </div>
