--- a/src/app/devices/xenon-device/xenon-device.component.html
+++ b/src/app/devices/xenon-device/xenon-device.component.html
@@ -1,9 +1,9 @@
 
 <mat-grid-list cols="4" rowHeight="400px">
-  <mat-grid-tile [rowspan]="2" [colspan]="2" [style.background]="colors[0]">
+  <mat-grid-tile [rowspan]="2" [colspan]="2" >
     
     <mat-card *ngIf="device">
-      <mat-card-title>Device: {{ device.name }}</mat-card-title>
+      <mat-card-title>Xenon-Device : {{ device.name }}</mat-card-title>
       <mat-card-subtitle>IP: {{ device.ip }}</mat-card-subtitle>
       <mat-divider inset></mat-divider>
       <mat-card-content>
@@ -11,7 +11,7 @@
       </mat-card-content>
     </mat-card>
     <mat-card *ngIf="!device">
-      <mat-card-title>Device: (No device selected)</mat-card-title>
+      <mat-card-title>Xenon-Device: (No device selected)</mat-card-title>
       <mat-card-subtitle>IP: </mat-card-subtitle>
       <mat-divider inset></mat-divider>
       <mat-card-content>
@@ -20,27 +20,17 @@
     
   </mat-grid-tile>
   
-  <mat-grid-tile [colspan]="2" [style.background]="colors[1]">
+  <mat-grid-tile [colspan]="2" >
     <mat-card>
-      <mat-card-title>Database content</mat-card-title>
-      <mat-divider inset></mat-divider>
-      
+
+      <vent-table [device]="device" *ngIf="device"></vent-table>
     </mat-card>
   </mat-grid-tile>
-  <mat-grid-tile [style.background]="colors[2]">
+  <mat-grid-tile [colspan]="2">
     <mat-card>
       <mat-card-title>Interval</mat-card-title>
       <mat-divider inset></mat-divider>
       <interval [device]="device" *ngIf="device"></interval>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile [style.background]="colors[3]">
-    <mat-card>
-      <mat-card-title>Ventilation data</mat-card-title>
-      <mat-divider inset></mat-divider>
-      <mat-card-content>
-        <vent-table [device]="device" *ngIf="device"></vent-table>
-      </mat-card-content>
     </mat-card>
   </mat-grid-tile>
 </mat-grid-list>
