--- a/src/app/database/resp-display/resp-display.component.html
+++ b/src/app/database/resp-display/resp-display.component.html
@@ -23,7 +23,8 @@
   
   
   
-  <mat-accordion>
+<mat-accordion>
+  
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -35,6 +36,7 @@
     </mat-expansion-panel-header>
     <resp-chart [respData]="respData"></resp-chart>
   </mat-expansion-panel>
+  
   <mat-expansion-panel >
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -46,6 +48,20 @@
     </mat-expansion-panel-header>
     <gas-chart [gasData]="gasData"></gas-chart>
   </mat-expansion-panel>
+
+  <mat-expansion-panel >
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Inhalation data
+      </mat-panel-title>
+      <mat-panel-description>
+        F<sub>i</sub>, MAC, Uptake
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <inhal-chart [inhalData]="inhalData"></inhal-chart>
+  </mat-expansion-panel>
+
+  
 </mat-accordion>
 
   
