Added Subject subscription test

--- a/src/app/database/episode-frame/episode-frame.component.html
+++ b/src/app/database/episode-frame/episode-frame.component.html
@@ -22,8 +22,8 @@
       <td>{{ episode?.value  }}</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td>Epi Resp records</td>
+      <td>{{ epiResp.length }}</td>
     </tr>
   </table>
   
