Updated inhal chart

--- a/src/app/database/resp-display/resp-display.component.html
+++ b/src/app/database/resp-display/resp-display.component.html
@@ -15,14 +15,11 @@
         <mat-hint>Timestamp of last record</mat-hint>
       </mat-form-field>
     </td>
-    <td class="center">
-      <button mat-button (click)="updateEpisodeTimes()">Update episode times</button>
+    <td class="center border">
+      <button mat-raised-button (click)="updateEpisodeTimes()">Update episode times</button>
     </td>
   </tr>
   </table>
-  
-  
-  
 <mat-accordion>
   
   <mat-expansion-panel>
