Added Refresh data button

--- a/src/app/database/resp-display/resp-display.component.html
+++ b/src/app/database/resp-display/resp-display.component.html
@@ -16,6 +16,9 @@
       </mat-form-field>
     </td>
     <td class="center border">
+      <button mat-raised-button (click)="refreshData()">Refresh Data</button>
+    </td>
+    <td class="center border">
       <button mat-raised-button (click)="updateEpisodeTimes()">Update episode times</button>
     </td>
   </tr>
