--- a/src/app/parameters/parameters.component.html
+++ b/src/app/parameters/parameters.component.html
@@ -64,10 +64,10 @@
       </ng-container>
       
       <tr mat-header-row *matHeaderRowDef="paramColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: paramColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: paramColumns" (click)="printRow(row)"></tr>
       
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+    <mat-paginator [pageSizeOptions]="[10, 20, 50]"
         showFirstLastButtons 
         aria-label="Select page of parameters">
     </mat-paginator>
