--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -2,7 +2,7 @@
   <mat-grid-tile>
     <mat-card>
       <mat-card-title>Devices</mat-card-title>
-      <mat-card-subtitle>Selected: {{ selectedDevice?.name }}</mat-card-subtitle>
+      <mat-card-subtitle>Selected: {{ selectedDevice.name }}</mat-card-subtitle>
       <mat-divider inset ></mat-divider>
         <device-list [(device)]="selectedDevice" ></device-list>
       <mat-card-content></mat-card-content>
