--- a/src/app/parameters/parameter.edit.dialog.html
+++ b/src/app/parameters/parameter.edit.dialog.html
@@ -1,6 +1,7 @@
 <h1 mat-dialog-title>Parameter ID {{ data.id }}</h1>
 <div mat-dialog-content>
   <p>Medibus Parameter</p>
+  <button mat-button>Basic</button>
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button color="primary" (click)="onNoClick()">No</button>
