--- a/src/app/parameters/parameter.edit.dialog.html
+++ b/src/app/parameters/parameter.edit.dialog.html
@@ -4,5 +4,5 @@
   <button mat-button>Basic</button>
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="onNoClick()">No</button>
+  <button mat-button (click)="onNoClick()">No</button>
 </div>
