--- a/src/app/parameters/parameters.component.html
+++ b/src/app/parameters/parameters.component.html
@@ -7,19 +7,6 @@
   </mat-sidenav-container>
 </mat-drawer>
 <mat-card>
-  <section>
-  <div class="example-label">Basic</div>
-  <div class="example-button-row">
-    <button mat-button>Basic</button>
-    <button mat-button color="primary">Primary</button>
-    <button mat-button color="accent">Accent</button>
-    <button mat-button color="warn">Warn</button>
-    <button mat-button disabled>Disabled</button>
-    <a mat-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-</mat-card>
-<mat-card>
   <mat-card-title>Medibus Parameters</mat-card-title>
   <mat-card-subtitle>Parameter definition table along with Snomed-CT identifier</mat-card-subtitle>
   <mat-divider inset></mat-divider>
@@ -47,7 +34,7 @@
       </ng-container>
       
       <ng-container matColumnDef="unit">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <th mat-header-cell *matHeaderCellDef> Unit </th>
         <td mat-cell *matCellDef="let param"> {{ param.unit }} </td>
       </ng-container>
       
