Param edit update

--- a/src/app/database/episode-detail/episode-detail.component.html
+++ b/src/app/database/episode-detail/episode-detail.component.html
@@ -6,7 +6,7 @@
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>ID</mat-label>
         <input matInput disabled [(ngModel)]="episode.eid" name="episodeId"/>
-        <mat-hint>Unique numberical value</mat-hint>
+        <mat-hint>Unique numerical value</mat-hint>
       </mat-form-field>
     </td>
     <td class="pr10">
