--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="selectedDevice !== undefined">
 <mat-grid-list cols="3" rowHeight="800px">
   <mat-grid-tile>
     <mat-card>
@@ -36,3 +37,4 @@
   
   </mat-drawer>
 </mat-drawer-container>
+</div>
