--- a/src/app/parameters/parameter-edit-dialog.component.html
+++ b/src/app/parameters/parameter-edit-dialog.component.html
@@ -1,37 +1,69 @@
-<h1 mat-dialog-title>Medibus Parameter | Parameter ID {{ data.id }}</h1>
+<h1 mat-dialog-title>Medibus Parameter</h1>
 <form class="parameter-edit-form">
-<table class="full-width mt10">
-  <tr>
-    <td>
-      <mat-form-field appearance="outline">
+<mat-dialog-content >
+      <mat-form-field appearance="outline" style="width:400px !important;">
         <mat-label>ID</mat-label>
         <input matInput disabled [(ngModel)]="data.id" name="paramId"/>
         <mat-hint>Unique numerical value</mat-hint>
       </mat-form-field>
-    </td>
-    <td>
-      <mat-form-field appearance="outline">
+
+      <mat-form-field appearance="outline" style="width:400px !important;">
         <mat-label>Code</mat-label>
         <input matInput disabled [(ngModel)]="data.code" name="paramCode"/>
         <mat-hint>Unique numerical value</mat-hint>
       </mat-form-field>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <mat-form-field appearance="outline">
+      
+      <mat-form-field appearance="outline" style="width:400px !important;">
+        <mat-label>Snomed-ID</mat-label>
+        <input matInput [(ngModel)]="data.snomedid" name="snomedid"/>
+        <mat-hint>Snomed-ID</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" style="width:400px !important;">
         <mat-label>Description</mat-label>
         <input matInput [(ngModel)]="data.description" name="description"/>
         <mat-hint>Textual description of parameter</mat-hint>
         <button *ngIf="data.description" matSuffix mat-icon-button aria-label="Clear" (click)="data.description=''">
           <mat-icon>close</mat-icon>
         </button>
-      </mat-form-field>      
-    </td>
-  </tr>
-</table>
-  <div mat-dialog-actions>
-    <button mat-button (click)="onCancelClick()">Cancel</button>
-    <button mat-button (click)="onOkClick()">OK</button>
-  </div>
+      </mat-form-field> 
+      
+      <mat-grid-list cols="2" rowHeight="80px">
+        <mat-grid-tile>
+          <mat-form-field>
+          <mat-label>Low Limit</mat-label>
+          <mat-select [(value)]="data.ll">
+            <mat-option [value]="true">True</mat-option>
+            <mat-option [value]="false">False</mat-option>
+          </mat-select>
+          </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field>
+          <mat-label>High Limit</mat-label>
+          <mat-select [(value)]="data.hl">
+            <mat-option [value]="true">True</mat-option>
+            <mat-option [value]="false">False</mat-option>
+          </mat-select>
+          </mat-form-field>
+        </mat-grid-tile>
+
+        <mat-grid-tile>
+          <mat-form-field>
+            <mat-label>Format</mat-label>
+            <mat-select [(value)]="data.format">
+              <mat-option [value]="'XXXX'">XXXX</mat-option>
+              <mat-option [value]="'_X.X'">_X.X</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-grid-tile>
+      </mat-grid-list>
+      
+
+</mat-dialog-content>
+
+<div mat-dialog-actions>
+  <button mat-button (click)="onCancelClick()">Cancel</button>
+  <button mat-button (click)="onOkClick()">OK</button>
+</div>
 </form>
