--- a/src/app/parameters/parameter-edit-dialog.component.html
+++ b/src/app/parameters/parameter-edit-dialog.component.html
@@ -3,36 +3,41 @@
 <mat-dialog-content >
       <mat-form-field appearance="outline" style="width:400px !important;">
         <mat-label>ID</mat-label>
-        <input matInput disabled [(ngModel)]="data.id" name="paramId"/>
+        <input matInput disabled [(ngModel)]="data.param.id" name="paramId"/>
         <mat-hint>Unique numerical value</mat-hint>
       </mat-form-field>
 
       <mat-form-field appearance="outline" style="width:400px !important;">
         <mat-label>Code</mat-label>
-        <input matInput disabled [(ngModel)]="data.code" name="paramCode"/>
+        <input matInput disabled [(ngModel)]="data.param.code" name="paramCode"/>
         <mat-hint>Unique numerical value</mat-hint>
       </mat-form-field>
       
       <mat-form-field appearance="outline" style="width:400px !important;">
         <mat-label>Snomed-ID</mat-label>
-        <input matInput [(ngModel)]="data.snomedid" name="snomedid"/>
+        <input matInput [(ngModel)]="data.param.snomedid" name="snomedid"/>
         <mat-hint>Snomed-ID</mat-hint>
       </mat-form-field>
 
       <mat-form-field appearance="outline" style="width:400px !important;">
         <mat-label>Description</mat-label>
-        <input matInput [(ngModel)]="data.description" name="description"/>
+        <input matInput [(ngModel)]="data.param.description" name="description"/>
         <mat-hint>Textual description of parameter</mat-hint>
-        <button *ngIf="data.description" matSuffix mat-icon-button aria-label="Clear" (click)="data.description=''">
+        <button *ngIf="data.param.description" matSuffix mat-icon-button aria-label="Clear" (click)="data.param.description=''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field> 
+      
+      <mat-form-field>
+        <mat-label>Create</mat-label>
+        <input matInput [(ngModel)]="create" name="doCreate">
+      </mat-form-field>
       
       <mat-grid-list cols="2" rowHeight="80px">
         <mat-grid-tile>
           <mat-form-field>
           <mat-label>Low Limit</mat-label>
-          <mat-select [(value)]="data.ll">
+          <mat-select [(value)]="data.param.ll">
             <mat-option [value]="true">True</mat-option>
             <mat-option [value]="false">False</mat-option>
           </mat-select>
@@ -41,7 +46,7 @@
         <mat-grid-tile>
           <mat-form-field>
           <mat-label>High Limit</mat-label>
-          <mat-select [(value)]="data.hl">
+          <mat-select [(value)]="data.param.hl">
             <mat-option [value]="true">True</mat-option>
             <mat-option [value]="false">False</mat-option>
           </mat-select>
@@ -51,7 +56,7 @@
         <mat-grid-tile>
           <mat-form-field>
             <mat-label>Format</mat-label>
-            <mat-select [(value)]="data.format">
+            <mat-select [(value)]="data.param.format">
               <mat-option [value]="'XXXX'">XXXX</mat-option>
               <mat-option [value]="'_X.X'">_X.X</mat-option>
             </mat-select>
