--- a/src/app/parameters/parameters.component.html
+++ b/src/app/parameters/parameters.component.html
@@ -2,7 +2,7 @@
 <mat-drawer mode="side" opened="true" >
   <mat-sidenav-container>
     <mat-nav-list style="width:200px;">
-      <div>Mat nav list item</div>
+      <div class="p-2"><button mat-raised-button (click)="openCreateDialog()" style="width: 100%" color="primary">Create new Parameter</button></div>
     </mat-nav-list>
   </mat-sidenav-container>
 </mat-drawer>
@@ -50,7 +50,7 @@
       
       <ng-container matColumnDef="m" >
         <th mat-header-cell *matHeaderCellDef> M </th>
-        <td mat-cell *matCellDef="let param" (click)="printRow(param)"> {{ param.m }} </td>
+        <td mat-cell *matCellDef="let param"> {{ param.m }} </td>
       </ng-container>
       
       <ng-container matColumnDef="ll">
@@ -64,7 +64,7 @@
       </ng-container>
       
       <tr mat-header-row *matHeaderRowDef="paramColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: paramColumns" (click)="printRow(row)"></tr>
+      <tr mat-row *matRowDef="let row; columns: paramColumns" (click)="openEditDialog(row)"></tr>
       
     </table>
     <mat-paginator [pageSizeOptions]="[10, 20, 50]"
