update of transact-status-display

--- a/src/app/parameters/parameters.component.html
+++ b/src/app/parameters/parameters.component.html
@@ -9,6 +9,7 @@
 <mat-card>
   <mat-card-title>Medibus Parameters</mat-card-title>
   <mat-card-subtitle>Parameter definition table along with Snomed-CT identifier</mat-card-subtitle>
+  <transact-status-display></transact-status-display>
   <mat-divider inset></mat-divider>
   <mat-card-content class="param-table border">
     <table mat-table [dataSource]="dataSource">
