--- a/src/app/parameters/transact-status-display/transact-status-display.component.html
+++ b/src/app/parameters/transact-status-display/transact-status-display.component.html
@@ -1,6 +1,6 @@
 <div class="rounded p-2 row">
-  <span class="col-3">Status:  {{ status.status  }}</span>
-  <span class="col-3">Success: {{ status.success }}</span>
-  <span class="col-3">Reason:  {{ status.reason  }}</span>
-  <span class="col-3">ID:      {{ status.id      }}</span>
+  <span class="col-3 text-secondary">Status:  {{ status.status  }}</span>
+  <span class="col-3 text-secondary">Success: {{ status.success }}</span>
+  <span class="col-3 text-secondary">Text:    {{ status.text    }}</span>
+  <span class="col-3 text-secondary">ID:      {{ status.id      }}</span>
 </div>
