--- a/src/app/parameters/parameter-edit-dialog.component.html
+++ b/src/app/parameters/parameter-edit-dialog.component.html
@@ -63,7 +63,7 @@
 </mat-dialog-content>
 
 <div mat-dialog-actions>
-  <button mat-button (click)="onCancelClick()">Cancel</button>
-  <button mat-button (click)="onOkClick()">OK</button>
+  <button mat-stroked-button (click)="onCancelClick()">Cancel</button>
+  <button mat-stroked-button color="primary" (click)="onOkClick()">OK</button>
 </div>
 </form>
